Fix template pdf

--- a/themes/juntosmovemos/pages/login.htm
+++ b/themes/juntosmovemos/pages/login.htm
@@ -77,7 +77,7 @@ function onLogin() {
         $file = storage_path('/app/uploads/certificado.png'); // no es necesario quitar        
         //$file = "http://localhost:8000/storage/app/media/certificados_consejo.png";
 
-        $data = ['nombres' => $ingeniero->nombres . $ingeniero->apellidos, '{apellidos}' => $ingeniero->apellidos, 'identificacion' => $ingeniero->identificacion,  'titulo' => $ingeniero->titulo->titulo, 'matricula' => $ingeniero->numeromatricula, 'resolucion' => $ingeniero->resolucion_nacional, 'fecha_resolucion' => $ingeniero->fecha_resolucion_acional, 'universidad' => $ingeniero->universidad->nombre, 'fecha_expedicion' => $fecha_expedicion, 'fecha_vigencia' => $fecha_vigencia, 'dias' => $dias, 'mes' => $mes, 'ano' => $ano, 'background_img' => $file, 'email' => $ingeniero->email];        
+        $data = ['nombres' => $ingeniero->nombres . " " . $ingeniero->apellidos, '{apellidos}' => $ingeniero->apellidos, 'identificacion' => $ingeniero->identificacion,  'titulo' => $ingeniero->titulo->titulo, 'matricula' => $ingeniero->numeromatricula, 'resolucion' => $ingeniero->resolucion_nacional, 'fecha_resolucion' => $ingeniero->fecha_resolucion_acional, 'universidad' => $ingeniero->universidad->nombre, 'fecha_expedicion' => $fecha_expedicion, 'fecha_vigencia' => $fecha_vigencia, 'dias' => $dias, 'mes' => $mes, 'ano' => $ano, 'background_img' => $file, 'email' => $ingeniero->email];        
         $storagePath =  storage_path('app/uploads/');
         $pdf_file_name = $ingeniero->identificacion.".pdf";
         $namePdf = $storagePath . $pdf_file_name;        
